grammar.js
    source_file: ($) => repeat($._line),

    _line: ($) => choice($.statement, $._blank_line, $.display_line),
    display_line: ($) =>
      prec(-1, seq(/[^@]/, repeat(choice($._variable, /[^\n]/)), /\n/)),

    // Statements are instructions entered into a run control report starting at line 3, forming a script.
    // Every statement line begins with `@` and follows this general format:
    //
    // @label:call,report options fields line-type,\ parameters variables . comment

    statement: ($) =>
      seq(
        $.stmt_prefix,
        optional($.label),
        repeat(" "),
        choice(repeat($._contents), $.if),
        $.stmt_terminator,
        optional($.comment),
      ),

    stmt_prefix: ($) => token("@"),

    // `label` A number identifying the statement line.
    // Use three or four-character, zero-filled labels (e.g., `@0003`) for easier script maintenance.
    label_reference: ($) => choice(/\d{1,4}/, $._variable),
    goto_reference: ($) =>
      choice(
        /\d{1,4}/,
        $._variable,
        delimited_content(
          ",",
          alias(/[Ee][Nn][Dd]/, $.keyword),
          optional(choice($.numeric_literal, $._variable)),
          optional(choice($.numeric_literal, $._variable)),
          choice($.numeric_literal, $._variable),
        ),
        seq(
          alias(/[Ll][Ii][Nn]/, $.keyword),
          optional(" "),
          optional(alias(choice("+", "-"), $.operator)),
          field("line_count", $.numeric_literal),
        ),
        seq(
          alias(/[Rr][Pp][Xx]/, $.keyword),
          " ",
          field("report", choice($.numeric_literal, $.string_literal)),
        ),
      ),

    // `call` The function call — an abbreviation for the operation name.
    // All calls stored in constants.js and mapped through case-insensitive function
    call: ($) => token(choice(...get_calls())),

    // The semicolon is allowed to appear before the terminator in IF statements, but otherwise it is space-period-space.
    stmt_terminator: ($) => token("."),

    comment: (_) => prec(-1, seq(/[^\n]+/, /\n/)),

    _contents: ($) =>
      choice(
        $.ldv,
        $.srh,
        $.sru,
        $.gto,
        $.inc,
        $.dec,
        $.chg,
        $.call_subroutine,
        $.return,
        $.rnm,
        $.bfn,
        $.fdr,
        $.rln,
        $.rdl,
        $.rer,
        $.rsr,
        $.lcv,
        $.lny,
        $.lnp,
        $._generic_statement,
      ),

    stmt_group: ($) =>
      choice(
        seq($._stmt_item, repeat(seq(",", optional($._stmt_item)))),
        seq(
          ",",
          seq(optional($._stmt_item), repeat(seq(",", optional($._stmt_item)))),
        ),
      ),

    _stmt_item: ($) =>
      repeat1(
        choice(
          $._variable_definition,
          $._reserved_word_definition,
          $.numeric_range,
          $.keyword,
          $.string_literal,
          $.numeric_literal,
          $.integer,
          $.float,
          $.operator,
          $.character,
        ),
      ),

    // Basic Tokens

    numeric_literal: ($) => token(/[0-9]+/),
    numeric_range: ($) =>
      seq(
        choice($._variable, $.numeric_literal),
        "-",
        choice($._variable, $.numeric_literal),
      ),
    identifier: ($) => token(/[A-Za-z][A-Za-z0-9]+/),
    string_literal: ($) =>
      token(choice(seq("'", /[^']*/, "'"), seq('"', /[^"]*/, '"'))),
    keyword: ($) =>
      token(
        choice(
          seq(/[Ll][Ii][Nn]/, optional(choice("-", "+")), /[0-9]+/),
          /[Ee][Nn][Dd]/,
          /[Rr][Pp][Xx]/,
        ),
      ),

    integer: ($) => token(choice(/\d+/, /\d+[Ee]\-?\d+/)),
    operator: ($) => token(choice(/[=+\-/*]/, /\*\*/, /\/\//)),
    character: ($) => token(prec(-1, /[^\s.,]/)),

    line_type: ($) =>
      token(choice("|", "*", ".", " ", "@", /[A-Za-z]/, /\$[TtAaBb]/)),

    // Essentially a RHS to an expression
    _value_definition: ($) =>
      repeat1(
        choice(
          $.string_literal,
          $.integer,
          $.float,
          $._variable_definition,
          $._reserved_word_definition,
          $.constant,
        ),
      ),

    _integer_value: ($) =>
      choice($.numeric_literal, $._variable, $.reserved_word, $.constant),

    expression: ($) =>
      seq(
        $._value_definition,
        optional(" "),
        $.operator,
        optional(" "),
        $._value_definition,
      ),

    // Variables

    named_variable: ($) => token(seq("<", /[^>]{1,12}/, ">")),
    numbered_variable: ($) => token(seq(/[Vv]/, /\d{1,3}/)),

    type: ($) =>
      token(prec(2, seq(/[afhiosAFHIOS]/, /\d{1,3}/, optional(/\.\d{1,2}/)))),
    reserved_word: ($) =>
      token(seq(choice(...ALL_RESERVED_WORDS.map(ci)), "$")),
    _reserved_word_definition: ($) =>
      seq($.reserved_word, optional($.substring)),

    constant: ($) => token(/[A-Za-z]+[A-Za-z0-9]*/),

    _variable: ($) =>
      choice(
        $.named_variable,
        $.global_variable,
        $.env_variable,
        $.numbered_variable,
      ),
    _variable_definition: ($) =>
      prec.left(
        2,
        seq(
          choice(
            $.named_variable,
            $.global_variable,
            $.env_variable,
            $.numbered_variable,
          ),
          optional($.type),
          optional($.array_index),
          optional($.substring),
        ),
      ),
    _variable_definition_ns: ($) =>
      prec.left(
        2,
        seq(
          choice(
            $.named_variable,
            $.global_variable,
            $.env_variable,
            $.numbered_variable,
          ),
          optional($._type_ns),
        ),
      ),

    address: ($) =>
      prec.right(
        2,
        choice(
          field("report", choice($._data_name, $.report_reference)),
          seq(
            field(
              "cabinet",
              choice($.numeric_literal, $._variable, $.reserved_word),
            ),
            ",",
            field(
              "drawer",
              choice(
                alias(/[A-Ia-i]/, $.identifier),
                $._variable,
                $.reserved_word,
              ),
            ),
            ",",
            optional(
              field(
                "report",
                choice($.numeric_literal, $._variable, $.report_reference),
              ),
            ),
          ),
        ),
      ),

    // These can't be followed by other params - must end with whitespace
    _short_address: ($) =>
      choice(
        seq(
          field("drawer", $._data_name),
          ",",
          field("report", $._variable, $.numeric_literal),
        ),
        seq(
          field("cabinet", choice($.numeric_literal, $._variable)),
          ",",
          field("drawer", choice(alias(/[A-Ia-i]/, $.identifier), $._variable)),
        ),
      ),

    _data_name: ($) => alias(token(seq("'", /[^']*/, "'")), $.string_literal),

    // Many commands have options which are sequences of characters
    option: ($) => /[A-Za-z@/]/,

    // Column character positions
    field: ($) => choice($.string_literal, $.numeric_range),

    // Search parameters list
    search_param: ($) =>
      seq(optional($.line_type), repeat1(seq(",", optional($._parameter)))),

    _parameter: ($) =>
      choice(
        $._variable_definition,
        $.string_literal,
        alias(/[A-Za-z0-9@=]+/, $.identifier),
      ),

    report_reference: ($) => token(choice(/\-[0-9]/, /\-1[0-6]/)),

    // Specific calls

    // LDV - Load Variables

    ldv: ($) => choice($._ldv_fmt1_fmt2, $._ldv_fmt3),

    // In practice it would seem that you can mix and match fmt1 and fmt2
    _ldv_fmt1_fmt2: ($) =>
      seq(
        $._ldv_call,
        optional(seq(",", repeat1($._ldv_base_options))),
        " ",
        choice($._variable_definition, $._variable_assignment),
        repeat(
          seq(",", choice($._variable_definition, $._variable_assignment)),
        ),
        " ",
      ),
    _ldv_fmt3: ($) =>
      seq(
        $._ldv_call,
        seq(
          ",",
          repeat($._ldv_base_options),
          alias(/[Qq]/, $.option),
          repeat($._ldv_base_options),
        ),
        " ",
        $._variable_assignment_delimited,
        repeat(seq(",", $._variable_assignment_delimited)),
        " ",
      ),
    _srh_report: ($) =>
      choice(
        delimited_content(
          ",",
          $.address,
          optional(field("start_line", choice($.numeric_literal, $._variable))),
          optional(field("num_lines", choice($.numeric_literal, $._variable))),
          field("missing_goto", $.goto_reference),
        ),
        alias($._short_address, $.address),
      ),

    gto: ($) => seq(alias(/[Gg][Tt][Oo]/, $.call), " ", $.goto_reference, " "),

    // INC Statement

    inc: ($) =>
      seq(
        alias(/[Ii][Nn][Cc]/, $.call),
        optional(
          seq(
            ",",
            choice(
              $._variable,
              $.integer,
              $.float,
              $._reserved_word_definition,
            ),
          ),
        ),
        " ",
        $._variable,
        repeat(seq(",", $._variable)),
        " ",
      ),

    // DEC Statement

    dec: ($) =>
      seq(
        alias(/[Dd][Ee][Cc]/, $.call),
        optional(
          seq(
            ",",
            choice(
              $._variable,
              $.integer,
              $.float,
              $._reserved_word_definition,
            ),
          ),
        ),
        " ",
        $._variable,
        repeat(seq(",", $._variable)),
        " ",
      ),

    // IF Statement

    // @IF[,o] val1 op val2 stmt1 [.] ; stmt2 .
    // @IF[,o] val1 op val2,val3[,val4,...,valn] stmt1 [.] ; stmt2 .
    // @IF[,o] val1 op val2 & op val3 [& op val4 ... & op valn] stmt1 [.] ; stmt2 .
    // @IF[,o] val1 op val2,(lab)[,val3,(lab),...,valn,(lab)] ; stmt1 .
    if: ($) =>
      seq(
        $._if_call,
        optional(seq(",", repeat1($._if_option))),
        " ",
        alias($._if_expression, $.expression),
        " ",
        repeat(
          seq(
            $._if_call,
            optional(seq(",", repeat1($._if_option))),
            " ",
            alias($._if_expression, $.expression),
            " ",
          ),
        ),
        optional($.branch),
        // optional(seq(optional(" "), ".", " ")),
        ";",
        choice(seq(" ", $.branch), optional(" ")),
      ),

    _if_expression: ($) =>
      seq(
        $._value_definition,
        optional(" "),
        $._if_operator,
        optional(" "),
        $._value_definition,
        optional(
          choice(
            repeat1(
              seq(
                ",",
                choice($._value_definition, seq("(", $.goto_reference, ")")),
              ),
            ),
            repeat1(
              seq(
                $._if_and_operator,
                $._if_operator,
                optional(" "),
                $._value_definition,
              ),
            ),
          ),
        ),
      ),

    branch: ($) => repeat1($._contents),

    _if_call: ($) => alias(/[Ii][Ff]/, $.call),

    _if_option: ($) =>
      alias(
        choice(/[CcSs]/, seq(/[Dd]/, alias(/[0-9]{1,2}/, $.date_format_id))),
        $.option,
      ),

    // CHG - Change Variable

    // @CHG v {exp|vld} .
    // @CHG rw v[,v,...,v] .
    call_subroutine: ($) =>
      seq(
        $._call_call,
        optional(seq(",", choice($.address, $._call_subroutine))),
        " ",
        choice(seq($.label_reference, optional("*")), $.js_function),
        " ",
        $._subroutine_parameter_list,
        " ",
      ),

    _call_call: ($) => alias(/[Cc][Aa][Ll][Ll]/, $.call),
    _call_subroutine: ($) => alias(token(seq('"', /[^"]+/, '"')), $.address),
    _subroutine_parameter_list: ($) =>
      seq(
        "(",
        optional(
          seq($.subroutine_parameter, repeat(seq(",", $.subroutine_parameter))),
        ),
        ")",
      ),

    subroutine_parameter: ($) =>
      choice(
        $._variable_definition,
        seq("*", $._variable_definition),
        $.string_literal,
        seq(alias(/[Rr][Nn][Mm]/, $.call), "(-", $.integer, ")"),
        seq(alias(/[Rr][Nn][Mm][Ss][Nn][Dd]/, $.call), "(-", $.integer, ")"),
        seq(alias(/[Rr][Nn][Mm][Rr][Cc][Vv]/, $.call), "(-", $.integer, ")"),
      ),

    // RETURN - Return from Subroutine

    return: ($) =>
      seq(
        alias(/[Rr][Ee][Tt][Uu][Rr][Nn]/, $.call),
        optional(seq(",", $.label_reference)),
        " ",
      ),

    // RNM - Rename

    rnm: ($) =>
      seq(
        alias(/[Rr][Nn][Mm]/, $.call),
        optional(seq(",", $.address)),
        " ",
        $.report_reference,
        " ",
      ),

    // BFN - Binary Find

    bfn: ($) =>
      seq(
        alias(/[Bb][Ff][Nn]/, $.call),
        ",",
        $._bfn_report,
        " ",
        choice(repeat1($._bfn_option), /''/),
        " ",
        $.field,
        repeat(seq(",", $.field)),
        " ",
        $.search_param,
        repeat(seq("/", $.search_param)),
        " ",
        optional(
          seq(
            delimited_content(
              ",",
              optional($._variable_definition),
              optional($._variable_definition),
              optional($._variable_definition), // Option O results in 3 extra variables here
              optional($._variable_definition),
              $._variable_definition,
            ),
            " ",
          ),
        ),
      ),

    _bfn_report: ($) =>
      choice(
        delimited_content(
          ",",
          $.address,
          optional(field("start_line", choice($.numeric_literal, $._variable))),
          field("missing_goto", $.goto_reference),
        ),
        alias($._short_address, $.address),
      ),

    _bfn_option: ($) =>
      alias(
        choice(
          seq(/[Ii]/, optional($.numeric_literal)),
          seq(/[Yy]/, optional(seq("(", $.line_type, ")"))),
          seq(/[Cc]/, "(", /[FfLlSs]/, ")"),
          seq(/[Ff]/, $.numeric_literal, repeat(seq(",", $.numeric_literal))),
          seq(/[Rr]/, $.numeric_range),
          /[AaBbEeKkNnOoPpQqSsUuZz@/]/,
        ),
        $.option,
      ),

    fdr: ($) =>
      seq(
        alias(/[Ff][Dd][Rr]/, $.call),
        ",",
        $._srh_report,
        " ",
        choice(repeat1($._fdr_option), /''/),
        " ",
        $.field,
        repeat(seq(",", $.field)),
        " ",
        $.search_param,
        repeat(seq("/", $.search_param)),
        " ",
        optional(
          seq(
            delimited_content(
              ",",
              optional($._variable_definition),
              optional($._variable_definition),
              optional($._variable_definition),
              $._variable_definition,
            ),
            " ",
          ),
        ),
      ),

    _fdr_option: ($) =>
      alias(
        choice(
          seq(/[Yy]/, optional(seq("(", $.line_type, ")"))),
          seq(/[Cc]/, "(", /[FfLlSs]/, ")"),
          seq(
            /[Rr]/,
            choice($.numeric_range, $.numeric_literal),
            repeat(seq(",", choice($.numeric_range, $.numeric_literal))),
          ),
          /[FfGgNn@/]/,
        ),
        $.option,
      ),

    // RLN - Read Line Next

    // @RLN[,l,lab] cc vdata .
    rln: ($) =>
      seq(
        alias(/[Rr][Ll][Nn]/, $.call),
        optional(
          seq(
            ",",
            optional($.numeric_literal),
            optional(seq(",", $.goto_reference)),
          ),
        ),
        " ",
        $.field,
        repeat(seq(",", $.field)),
        " ",
        $._variable_definition,
        repeat(seq(",", $._variable_definition)),
        " ",
      ),

    // RDL - Read Line

    // @RDL,c,d,r,l[,lab] cc vdata .
    _rer_option: ($) => alias(/[CcJjHhPp]/, $.option),
