test/corpus/chg_statement.txt
===============
CHG Statement
===============

@chg <commission> <sales> * <percent> .
@chg input$ <month>i2,<day>i2,<year>i2 .

---

(source_file
  (statement
    (stmt_prefix)
    (call)
    (stmt_group
      (named_variable)
    )
    (stmt_group
      (named_variable)
    )
    (stmt_group
      (operator)
    )
    (stmt_group
      (named_variable)
    )
    (stmt_terminator)
  )

  (statement
    (stmt_prefix)
    (call)
    (stmt_group
      (reserved_word)
    )
    (stmt_group
      (named_variable)
      (type)
      (named_variable)
      (type)
      (named_variable)
      (type)
    )
    (stmt_terminator)
  )
)
