test/corpus/dec_statement.txt
==============
DEC Statement
==============

@dec <counter> .
@dec,10 <counter> .
@dec,<discount> <totalcost> .

---

(source_file
  (statement
    (stmt_prefix)
    (dec
      (call)
      (named_variable)
    )
    (stmt_terminator)
  )
  (statement
    (stmt_prefix)
    (dec
      (call)
      (integer)
      (named_variable)
    )
    (stmt_terminator)
  )
  (statement
    (stmt_prefix)
    (dec
      (call)
      (named_variable)
      (named_variable)
    )
    (stmt_terminator)
  )
)
