test/corpus/gto_statement.txt
==============
GTO Statement
==============

@    GTO END,<recs> .           If linked, return to caller
@    GTO RPX 100 .                                  Go to exit routine
@    GTO 0020 .                                     Return to entry screen
@    GTO LIN2 .

---

(source_file
  (statement
    (stmt_prefix)

    (call)
    (stmt_group
      (keyword)
      (named_variable)
    )

    (stmt_terminator)
    (comment)
  )
  (statement
    (stmt_prefix)

    (call)
    (stmt_group
      (keyword)
    )
    (stmt_group
      (numeric_literal)
    )

    (stmt_terminator)
    (comment)
  )
  (statement
    (stmt_prefix)

    (call)
    (stmt_group
      (numeric_literal)
    )

    (stmt_terminator)
    (comment)
  )
  (statement
    (stmt_prefix)

    (call)
    (stmt_group
      (keyword)
    )
    (stmt_terminator)
  )
)
