test/corpus/if_logical_and_statement.txt
==========================
IF Logical AND Statement
==========================

@if,c v1 GT 0 & LT 100 gto 003 ; .

---

(source_file
  (statement
    (stmt_prefix)
    (if
      (call)
      (option)
      (expression
        (numbered_variable)
        (operator)
        (integer)
        (operator)
        (integer)
      )
      (branch
        (gto
          (call)
          (goto_reference)
        )
      )
    )
    (stmt_terminator)
  )
)
