test/corpus/if_logical_or_statement.txt
=========================
IF Logical OR Statement
=========================

@if <menu> EQ 2,4 gto 010 ;.
@    IF <user> = SCHEDULER,BPORT,MAPCOORD LDV <user>a10=VIPS ;. System updates

---

(source_file
  (statement
    (stmt_prefix)
    (if
      (call)
      (expression
        (named_variable)
        (operator)
        (integer)
        (integer)
      )
      (branch
        (gto
          (call)
          (goto_reference)
        )
      )
    )
    (stmt_terminator)
  )

  (statement
    (stmt_prefix)
    (if
      (call)
      (expression
        (named_variable)
        (operator)
        (constant)
        (constant)
        (constant)
      )
      (branch
        (ldv
          (call)
          (named_variable)
          (type)
          (constant)
        )
      )
    )
    (stmt_terminator)
    (comment)
  )

)
