test/corpus/ldv_fmt_3.txt
==============
LDV Format 3
==============

@    LDV,Q <line>a4=<s>,3(|) .                      Line number
@    LDV,Q <line>a4=<s>,4(|),<line2>a4=<s>,5(|) .   Line number
@    LDV,RQ <empnum>i10=<s>,2(|) .
@    LDV,CQR <empnum>i10=<s>,2(|) .

---

(source_file
  (statement
    (stmt_prefix)
    (ldv
      (ldv_options)
      (variable)
      (variable_type)
      (variable)
      (number)
      (character)
    )
    (stmt_terminator)
    (comment)
  )
  (statement
    (stmt_prefix)
    (ldv
      (ldv_options)
      (variable)
      (variable_type)
      (variable)
      (number)
      (character)
      (variable)
      (variable_type)
      (variable)
      (number)
      (character)
    )
    (stmt_terminator)
    (comment)
  )
  (statement
    (stmt_prefix)
    (ldv
      (ldv_options)
      (variable)
      (variable_type)
      (variable)
      (number)
      (character)
    )
    (stmt_terminator)
    (comment)
  )
  (statement
    (stmt_prefix)
    (ldv
      (ldv_options)
      (variable)
      (variable_type)
      (variable)
      (number)
      (character)
    )
    (stmt_terminator)
    (comment)
  )
)
