test/corpus/ldv_statement.txt
==============
LDV Statement
==============

@    LDV,P <run>,<title> LDV,CU <rundesc>s40=<title> . Pack, Center, Uppercase
@    LDV,Q <line>a4=<s>,3(|) .                      Line number

---

(source_file
  (statement
    (stmt_prefix)
      (ldv 
        (call)
        (options)
        (named_variable)
        (named_variable)
      )
      (ldv 
        (call)
        (options)
        (named_variable)
        (type)
        (named_variable)
      )
    (stmt_terminator)
    (comment)
  )
  (statement
    (stmt_prefix)
    (ldv
      (call)
      (options)
      (named_variable)
      (type)
      (named_variable)
      (integer)
      (character)
    )
    (stmt_terminator)
    (comment)
  )
)
