test/corpus/rln_statement.txt
==============
RLN Statement
==============

@    RLN,,LIN3 11-4,16-7,131-5 <trip>,<tdat>,<bidmo> .

---

(source_file
  (statement
    (stmt_prefix)
    (rln
      (call)
      (goto_reference
        (keyword)
        (numeric_literal)
      )
      (field
        (numeric_range
          (numeric_literal)
          (numeric_literal)
        )
      )
      (field
        (numeric_range
          (numeric_literal)
          (numeric_literal)
        )
      )
      (field
        (numeric_range
          (numeric_literal)
          (numeric_literal)
        )
      )
      (named_variable)
      (named_variable)
      (named_variable)
    )
    (stmt_terminator)
  )
)
