test/corpus/rnm_statement.txt
==============
RNM Statement
==============

@    RNM,-2 -1 .
@    RNM -4 .                                       Save final summary report

---

(source_file
  (statement
    (stmt_prefix)
    (rnm
      (call)
      (address
        report: (report_reference)
      )
      (report_reference)
    )
    (stmt_terminator)
  )

  (statement
    (stmt_prefix)
    (rnm
      (call)
      (report_reference)
    )
    (stmt_terminator)
    (comment)
  )
)
